---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: fib.cm
============================================================
Source code:
func main() -> felt {
    let n = 10;
    let result = fib(n);
    return result;
}

func fib(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    if (n == 1) {
        return 1;
    }
    return fib(n - 1) + fib(n - 2);
}

============================================================
Generated CASM:
main:
   0: 6 10 _ 0             // Store immediate: [fp + 0] = 10
   1: 12 2 5 _             // call fib
   2: 4 1 _ 3              // Store: [fp + 3] = [fp + 1]
   3: 4 3 _ -3             // Return value 0: [fp -3] = [fp + 3]
   4: 15 _ _ _             // return
fib:
   5: 31 -4 4 _            // if [fp + -4] != 0 jmp rel fib_2
   6: 20 7 _ _             // jump abs fib_1
fib_1:
   7: 6 0 _ -3             // Return value 0: [fp -3] = 0
   8: 15 _ _ _             // return
fib_2:
   9: 3 -4 1 0             // [fp + 0] = [fp + -4] op 1
  10: 31 0 3 _             // if [fp + 0] != 0 jmp rel fib_4
fib_3:
  11: 6 1 _ -3             // Return value 0: [fp -3] = 1
  12: 15 _ _ _             // return
fib_4:
  13: 3 -4 1 1             // [fp + 1] = [fp + -4] op 1
  14: 12 3 5 _             // call fib
  15: 3 -4 2 4             // [fp + 4] = [fp + -4] op 2
  16: 12 6 5 _             // call fib
  17: 0 2 5 -3             // [fp + -3] = [fp + 2] op [fp + 5]
  18: 15 _ _ _             // return
